--- a/.github/workflows/meterian.yml
+++ b/.github/workflows/meterian.yml
@@ -14,4 +14,4 @@ jobs:
             env:
                 METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
             with:
-                cli_args: --report-console --flags:env=qa 
+                cli_args: --report-console  
